[tool.poetry]
name = "dolus"
version = "0.1.0"
description = "A command-line interface to put effects on your virtual camera(OBS/Unity/v4l2loopback)"
authors = ["Avanindra Chakraborty"]
license = "MIT"
readme="README.md"
homepage= "https://github.com/AvanindraC/dolus"
repository = "https://github.com/AvanindraC/dolus"

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
pafy = "^0.5.5"
click = "^8.0.1"
opencv-python = "^4.5.3"
youtube_dl = "^2021.6.6"
numpy = "^1.21.2"
click-help-colors = "^0.9.1"
pyvirtualcam = "^0.8.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dolus = "dolus:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
